Worked through in-class exercises

--- a/cm006-exercise.Rmd
+++ b/cm006-exercise.Rmd
@@ -27,8 +27,8 @@ Load the `gapminder` and `tidyverse` packages. Hint: `suppressPackageStartupMess
     
 ```{r load packages, warning = FALSE, message = FALSE}
 # load your packages here:
-library(FILL_THIS_IN)
-library(FILL_THIS_IN)
+library(gapminder)
+library(tidyverse)
 ```
     
 
@@ -37,7 +37,7 @@ library(FILL_THIS_IN)
 1. Make a data frame containing the columns `year`, `lifeExp`, `country` from the gapminder data, in that order.
 
 ```{r}
-select(gapminder, FILL_THIS_IN)
+select(gapminder, year, lifeExp, country)
 ```
 
 
@@ -48,20 +48,20 @@ select(gapminder, FILL_THIS_IN)
 select(gapminder, country, continent, year, lifeExp)
 
 # Better way:
-select(gapminder, FILL_THIS_IN)
+select(gapminder, country:lifeExp)
 ```
 
 
 3. Select all variables, except `lifeExp`.
 
 ```{r}
-select(gapminder, FILL_THIS_IN)
+select(gapminder, -lifeExp)
 ```
 
 4. Put `continent` first. Hint: use the `everything()` function.
 
 ```{r}
-select(gapminder, FILL_THIS_IN, FILL_THIS_IN)
+select(gapminder, continent, everything())
 ```
 
 
@@ -69,9 +69,10 @@ select(gapminder, FILL_THIS_IN, FILL_THIS_IN)
 
 ```{r}
 # compare
-select(gapminder, FILL_THIS_IN)
+select(gapminder, cont = continent, everything())
+select(gapminder, country, gdpPercap:continent)
 
-rename(gapminder, FILL_THIS_IN)
+rename(gapminder, cont = continent)
 ```
 
 
@@ -80,19 +81,19 @@ rename(gapminder, FILL_THIS_IN)
 1. Order by year.
 
 ```{r}
-arrange(gapminder, FILL_THIS_IN)
+arrange(gapminder, year)
 ```
 
 2. Order by year, in descending order.
 
 ```{r}
-arrange(gapminder, FILL_THIS_IN)
+arrange(gapminder, desc(year))
 ```
 
 3. Order by year, then by life expectancy.
 
 ```{r}
-arrange(gapminder, FILL_THIS_IN, FILL_THIS_IN)
+arrange(gapminder, desc(year), desc(lifeExp))
 ```
 
 ## Piping, `%>%` (8 min)
@@ -114,7 +115,10 @@ Now using with pipes:
 
 ```{r}
 # alter the below to include 2 "pipes"
-arrange(select(gapminder, year, lifeExp, country), year, lifeExp)
+gapminder %>%
+  select(year, lifeExp, country) %>% # this line selects columns year..
+  arrange(year, country)
+
 ```
 
 # Resume lecture 
@@ -127,21 +131,25 @@ Return to guide at section 6.7.
 
 ```{r}
 gapminder %>%
-  filter(FILL_THIS_IN)
+  filter(pop > 100000000)
 ```
 
 2. Your turn: of those rows filtered from step 1., only take data from Asia.
 
 ```{r}
+gapminder %>% 
+  filter(pop > 100000000, 
+         continent == 'Asia')
+
 gapminder %>%
-  filter(FILL_THIS_IN)
+  filter(pop > 100000000 & continent == 'Asia') 
 ```
 
-3. Repeat 2, but take data from countries Brazil, and China. 
+3. Take data from countries Brazil, and China. 
 
 ```{r}
-gapminder %>%
-  filter(FILL_THIS_IN)
+gapminder %>% 
+  filter(country == 'Brazil' | country == 'China')
 ```
 
 ## `mutate()` (10 min)
@@ -153,7 +161,7 @@ Let's get:
 
 ```{r}
 gapminder %>%
-  mutate(FILL_THIS_IN)
+  mutate(gdpBill = (gdpPercap*pop/1000000000) %>% round(digits = 2))
 ```
 
 Notice the backwards compatibility! No need for loops!
@@ -162,7 +170,10 @@ Try the same thing, but with `transmute` (drops all other variables).
 
 ```{r}
 gapminder %>%
-  transmute(FILL_THIS_IN)
+  transmute(gdpBill = round(gdpPercap*pop/1000000000), digits = 2)
+
+0.86786
+round(0.86786, digits = 2)
 ```
 
 The `if_else` function is useful for changing certain elements in a data frame.
@@ -171,12 +182,20 @@ Example: Suppose Canada's 1952 life expectancy was mistakenly entered as 68.8 in
 
 ```{r}
 gapminder %>%
-  mutate(FILL_THIS_IN)
+  mutate(lifeExp = if_else(country == 'Canada' & year == 1952, 70, lifeExp))
+
+if (country == 'Canada' & year == 1952) {
+  70
+} else{
+  lifeExp
+}
 ```
 
 Your turn: Make a new column called `cc` that pastes the country name followed by the continent, separated by a comma. (Hint: use the `paste` function with the `sep=", "` argument).
 
 ```{r}
+gapminder %>%
+  mutate(cc = paste(, sep = ", "))
 ```
 
 These functions we've seen are called __vectorized functions__.
